# ir_analyses

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gemini.md  pyproject.toml  requirements.txt  run_tests.bat
.github/workflows/: ci-cd.yml
app/: app.py
config/: config.py  config.toml
documents/: DOCKER_IMPROVEMENT_GUIDE.md  IR_Analysis_Roadmap_and_Design.md  MVP_Development_Plan.md  System_Architecture_Design.md  TEST_EXECUTION_GUIDE.md  analyze_csv.py  api_refactoring_guide.md  api_review.md  app_refactoring_guide.md  db_and_sqlalchemy_review.md  db_table_document.xlsx  refactoring_roadmap.md  test.csv
documents/old/: DB_Persistence_Implementation_Estimate.md  DOCKER_IMPROVEMENT_GUIDE.md  IR_Analysis_Roadmap_and_Design.md  MVP_Development_Plan.md  api_refactoring_guide.md  api_review.md  app_refactoring_guide.md  db_and_sqlalchemy_review.md  refactoring_roadmap_v2.md  test_failure_analysis_20260324.md
ir_analyses.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: bypass_import_csv.py  import_financial_data.py
sql/: ddl.sql
tests/: conftest.py  test_data_mapper.py  test_db_controller.py  test_mapping.py
tests/repositories/: test_company_repository.py  test_financial_report_repository.py  test_repositories.py
tests/service/: test_financial_service.py
utils/: __init__.py  analysis.py  api.py  config_loader.py  data_mapper.py  db_controller.py  db_models.py  function.py  parser.py
utils/repositories/: base_repository.py  company_repository.py  financial_data_repository.py  financial_item_repository.py  financial_report_repository.py
(+2 files in other folders)
